--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -20,11 +20,14 @@ WelcomeScreenVC_GetInstructionsButtonTitle = "Du hast keinen API Schlüssel?";
 
 SetPermissionsVC_NavigationBarTitle = "Ortsdaten Zugriff";
 
-SetPermissionsVC_Description = "Um alle Funktionen von NearbyWeather zu nutzen und Wetter Daten für Städte in der Umgebung zu erhalten, benötigt NearbyWeather Zugriff auf deine Ortsdaten. Falls du den Zugriff nicht genehmigst, werden Beispiel-Daten verwendet.";
+SetPermissionsVC_Description = "Um Wetterdaten für Städte in deiner Umgebung zu erhalten, benötigt NearbyWeather Zugriff auf deine Ortsdaten. Die App funktioniert auch ohne Zugriff auf deinen Standort. Der Funktionsumfang ist dann jedoch eingeschränkt.";
 SetPermissionsVC_AskPermissionsButtonTitle = "Konfigurieren";
 
 
 // MARK: - NearbyLocationsTableViewController
+
+LocationsListTVC_EmptyListTitle = "Keine Wetterdaten";
+LocationsListTVC_EmptyListDescription = "Wetterdaten konnten nicht geladen werden. Gehe sicher, dass du eine Internetverbindung hast.";
 
 LocationsListTVC_TableViewSectionHeader1 = "Wetter in Favorisierter Stadt";
 LocationsListTVC_TableViewSectionHeader2 = "Wetter in Nahegelegenen Städten";
@@ -44,9 +47,14 @@ LocationsListTVC_SortAlert_Action3 = "Nach Distanz sortieren";
 
 LocationsListTVC_BackButtonTitle = "Zurück";
 
-LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast und dein API Schlüssel korrekt eingegeben ist.";
-LocationsListTVC_AlertIncorrectBookmarkedCity = "Es konnte keine Daten für die eingebene Stadt gefunden werde. Gehe sicher, dass der Name richtig geschrieben ist und diese Stadt existier.";
-LocationsListTVC_AlertLocationUnavailable = "Du gestattest NearbyWeather keinen Zugriff auf deinen Standtort. Somit können keine Daten für nahegelgene Wetter-Stationen geladen werden.";
+LocationsListTVC_AlertNoData = "Es konnten keine Daten geladen werden. Gehe sicher, dass du eine Netzwerkverbindung hast.";
+LocationsListTVC_UnknownError = "Beim Laden der Wetterdaten ist ein unbekannter Fehler aufgetreten. Versuche es später erneut.";
+LocationsListTVC_HttpError = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Statuscode: %@";
+LocationsListTVC_RequestTimOutError = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Die Anfrage wurde aufgrund einer Zeitüberschreitung abgebrochen.";
+LocationsListTVC_MalformedUrlError = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Die Anfrage-URL ist ungültig.";
+LocationsListTVC_UnreadableResult = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Die Antwort konnte nicht verarbeitet werden.";
+LocationsListTVC_UnauthorizedApiKey = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Dein OpenWeatherMap API-Schlüssel ist ungültig.";
+LocationsListTVC_LocationUnavailable = "Beim Laden der Wetterdaten ist ein Fehler aufgetreten. Dein Standort konnte nicht bestimmt werden.";
 
 
 // MARK: - WeatherDetailViewController
