--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -29,13 +29,12 @@ SetPermissionsVC_AskPermissionsButtonTitle = "Konfigurieren";
 LocationsListTVC_EmptyListTitle = "Keine Wetterdaten";
 LocationsListTVC_EmptyListDescription = "Wetterdaten konnten nicht geladen werden. Gehe sicher, dass du eine Internetverbindung hast.";
 
-LocationsListTVC_TableViewSectionHeader1 = "Wetter in Favorisierter Stadt";
-LocationsListTVC_TableViewSectionHeader2 = "Wetter in Nahegelegenen Städten";
+LocationsListTVC_TableViewSectionHeader1 = "Wetter in Favorisiertem Ort";
+LocationsListTVC_TableViewSectionHeader2 = "Wetter in Nahegelegenen Ort";
 
 LocationsListTVC_RefreshPullHandle = "Zum Aktualisieren herunterziehen";
 LocationsListTVC_LastRefresh = "Zuletzt aktulisiert: %@";
 
-LocationsListTVC_LocationAlert_Title = "Kein Zugriff auf den aktuellen Ort";
 LocationsListTVC_LocationAlert_Message = "Um Wetter Daten für Städte in Ihrer Nähe bereitzustellen, benötigt NearbyWeather Ihren Standort. Sie haben diesen für die App nicht freigegeben. Dies kann in den Einstellungen verändert werden. Während Ihr Standort nicht bestimmt werden kann, werden Beispiel-Koordinaten verwendet.";
 LocationsListTVC_LocationAlert_Action1 = "Verwerfen";
 LocationsListTVC_LocationAlert_Action2 = "Einstellungen";
@@ -107,7 +106,7 @@ SettingsTVC_About = "Über";
 SettingsTVC_SectionTitle0 = "Allgemein";
 SettingsTVC_SectionTitle1 = "Favorisierte Stadt";
 SettingsTVC_SectionTitle2 = "OpenWeatherMap API Schlüssel";
-SettingsTVC_SectionTitle3 = "Anzahl der Such-Ergebnisse";
+SettingsTVC_SectionTitle3 = "Anzahl der nahegelegenen Ergebnisse";
 SettingsTVC_SectionTitle4 = "Temperatur Einheit";
 SettingsTVC_SectionTitle5 = "Geschwindigkeits/Entfernungs-Einheit";
 
