--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -90,6 +90,7 @@ InfoTVC_TableViewSectionHeader3 = "Verwendete Bibliotheken";
 InfoTVC_AppTitle = "NearbyWeather - Open Source Wetter";
 
 InfoTVC_RateVersion = "Im App Store Bewerten";
+InfoTVC_ReportIssue = "Bug Melden";
 InfoTVC_DeveloperNameSubtitle_0 = "Projekt Inhaber";
 InfoTVC_HowToContribute = "Entwicklung Unterstützen";
 InfoTVC_Source = "Quellcode via GitHub";
@@ -127,6 +128,9 @@ OpenWeatherMapCityFilterTVC_NavigationBarTitle = "Stadt Einstellen";
 OpenWeatherMapCityFilterTVC_SearchBarPlaceholder = "Suche nach Städtenamen";
 
 // MARK: - General
+
+viaEmail = "Email";
+viaGitHub = "GitHub";
 
 kilometres_per_hour = "Kilometer/Stunde";
 miles_per_hour = "Meilen/Stunde";
