suugest a feature added to report a bug

--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -91,7 +91,7 @@ InfoTVC_TableViewSectionHeader3 = "Libraries Used";
 InfoTVC_AppTitle = "NearbyWeather - Open Source Weather";
 
 InfoTVC_RateVersion = "Rate this Version";
-InfoTVC_ReportIssue = "Report a Bug";
+InfoTVC_ReportIssue = "Suggest a Feature | Report a Bug";
 InfoTVC_DeveloperNameSubtitle_0 = "Project Owner";
 InfoTVC_HowToContribute = "How to Contribute";
 InfoTVC_Source = "Source Code via GitHub";
