--- a/NearbyWeather/de.lproj/Localizable.strings
+++ b/NearbyWeather/de.lproj/Localizable.strings
@@ -91,7 +91,7 @@ InfoTVC_TableViewSectionHeader3 = "Verwendete Bibliotheken";
 InfoTVC_AppTitle = "NearbyWeather - Open Source Wetter";
 
 InfoTVC_RateVersion = "Im App Store Bewerten";
-InfoTVC_ReportIssue = "Bug Melden";
+InfoTVC_ReportIssue = "Feature Vorschlagen | Bug Melden";
 InfoTVC_DeveloperNameSubtitle_0 = "Projekt Inhaber";
 InfoTVC_HowToContribute = "Entwicklung Unterstützen";
 InfoTVC_Source = "Quellcode via GitHub";
