--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -110,7 +110,7 @@ SettingsTVC_SectionTitle1 = "Bookmarked Location";
 SettingsTVC_SectionTitle2 = "OpenWeatherMap API Key";
 SettingsTVC_SectionTitle3 = "Amount of Nearby Results";
 SettingsTVC_SectionTitle4 = "Temperature Unit";
-SettingsTVC_SectionTitle5 = "Distance/Speed Unit";
+SettingsTVC_SectionTitle5 = "Distance | Speed Unit";
 
 SettingsTVC_Results = "Results";
 SettingsTVC_RefreshOnAppStart = "Refresh on App Start";
