show reload button on empty WeatherListVC when coming back online

--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -132,6 +132,8 @@ OpenWeatherMapCityFilterTVC_SearchBarPlaceholder = "Search by City Name";
 
 // MARK: - General
 
+reload = "Reload";
+
 viaEmail = "Mail";
 viaGitHub = "GitHub";
 
