focus map on multiple bookmarked locations

--- a/NearbyWeather/Base.lproj/Localizable.strings
+++ b/NearbyWeather/Base.lproj/Localizable.strings
@@ -130,11 +130,12 @@ InputSettingsTVC_SectionFooter_Mode_EnterAPIKey = "The API Key has a length of e
 LocationManagementTVC_NavigationBarTitle = "Manage Locations";
 
 
-
 // MARK:  - OpenWeatherMapCityFilterTableViewController
 
 OpenWeatherMapCityFilterTVC_NavigationBarTitle = "Add Location";
 OpenWeatherMapCityFilterTVC_SearchBarPlaceholder = "Search by Name";
+
+OpenWeatherMapCityFilterTVC_FocusOnBookmarkedLocation = "Focus on Bookmarked Location";
 
 // MARK: - General
 
